@@ -1,3 +1,5 @@
+5.nov  (la)
+      - fix #6345: First time users confuse demo score for demo software
 2.nov  (la)
       - fix #6451: score jump to current position when record MIDI in Note Input Mode
 1.nov  (la)
